--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="radke.yannick.android.emailmessage">
-
+    <!--Starticon: Source-URL: https://pixabay.com/de/illustrations/mail-nachricht-e-mail-1454731/
+                   Author: Deans_Icons -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/mail_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
